--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-youtube": "^10.1.0",
+    "redux-persist": "^6.0.0",
     "swiper": "^8.4.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
