--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
     "node-sass": "^9.0.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
